# Flush

./: .gitignore  LICENSE  README
src/: AmtecSettings.H  AmtecSettings.cc  CMakeLists.txt  CadSettings.H  CadSettings.cc  ClusterSettings.H  ClusterSettings.cc  FingerprintBase.H  FingerprintBase.cc  HashedFingerprint.H  HashedFingerprint.cc  MagicInts.H  NotHashedFingerprint.H  NotHashedFingerprint.cc  SatanSettings.H  SatanSettings.cc  amtec.cc  build_time.cc  cad.cc  cluster.cc  count_bits_set.cc  get_cwd.cc  histogram.cc  merge_fp_files.cc  reverse_fp_file.cc  satan.cc  similarity_calcs.cc  subset_fp_file.cc
test_dir/: make_bits.py  make_rdkit_bits.py
